overflow fixed

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -64,6 +64,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
 
             a{
                 display: flex;
